bugfix serving examples

--- a/python/examples/serving/your_own_llm/llm.yaml
+++ b/python/examples/serving/your_own_llm/llm.yaml
@@ -5,7 +5,10 @@ entry_point: "main_entry.py"
 data_cache_dir: "~/fedml_serving/model_and_config"
 # If you want to install some packages
 # Please write the command in the bootstrap.sh
-bootstrap: config/bootstrap.sh
+bootstrap: |
+  echo "Bootstrap start..."
+  sh ./config/bootstrap.sh
+  echo "Bootstrap finished"
 
 # If you do not have any GPU resource but want to serve the model
 # Try fedml® launch platform, and Uncomment the following lines.
