--- a/python/examples/launch/serve_job_llm.yaml
+++ b/python/examples/launch/serve_job_llm.yaml
@@ -1,7 +1,7 @@
 workspace:
 
 job: |
-    echo "current job id: $FEDML_CURRENT_JOB_ID"
+    echo "current job id: $FEDML_CURRENT_RUN_ID"
     echo "current edge id: $FEDML_CURRENT_EDGE_ID"
     echo "Hello, Here is the launch platform."
     echo "Current directory is as follows."
