--- a/python/examples/launch/serve_job_mnist.yaml
+++ b/python/examples/launch/serve_job_mnist.yaml
@@ -8,7 +8,7 @@ workspace: serve_mnist
 # Otherwise, you should exit with a zero code, e.g. exit 0.
 # Support multiple lines, which can not be empty.
 job: |
-    echo "current job id: $FEDML_CURRENT_JOB_ID"
+    echo "current job id: $FEDML_CURRENT_RUN_ID"
     echo "current edge id: $FEDML_CURRENT_EDGE_ID"
     echo "Hello, Here is the launch platform."
     echo "Current directory is as follows."
