--- a/devops/dockerfile/multi-stages-build/Dockerfile-Traing-Dev
+++ b/devops/dockerfile/multi-stages-build/Dockerfile-Traing-Dev
@@ -114,4 +114,4 @@ COPY --from=fedml-image-base /fedml/fedml-pip/python/fedml ${FEDML_PIP_HOME}
 
 ENV ACCOUNT_ID=0 FEDML_VERSION=${VERSION} SERVER_DEVICE_ID=0 SERVER_OS_NAME=linux
 
-CMD fedml login ${ACCOUNT_ID} -v ${FEDML_VERSION} -s -id ${SERVER_DEVICE_ID} -os ${SERVER_OS_NAME};./runner.sh
+CMD python3 ./fedml-pip/fedml/computing/scheduler/master/server_daemon.py -t login -u ${ACCOUNT_ID} -v ${FEDML_VERSION} -r edge_server -id ${SERVER_DEVICE_ID} -os ${SERVER_OS_NAME};./runner.sh
