[WIP]: Hotfixing sklearn installation error, ixi tiny dataset download url link and other environmental configurations.

--- a/python/examples/federate/prebuilt_jobs/healthcare/fed_ixi/config/fedml_config.yaml
+++ b/python/examples/federate/prebuilt_jobs/healthcare/fed_ixi/config/fedml_config.yaml
@@ -10,6 +10,7 @@ environment_args:
 
 data_args:
   dataset: "Fed-IXI"
+  download: true
   data_cache_dir: ~/healthcare/ixi 
   partition_method: "hetero"
   partition_alpha: 0.5
