--- a/python/examples/launch/federate_build_package/federated_job.yaml
+++ b/python/examples/launch/federate_build_package/federated_job.yaml
@@ -1,23 +1,3 @@
-
-## Build the package for FEDML Federate
-```
-Usage: fedml federate build [OPTIONS] [YAML_FILE]
-
-  Build federate packages for the FedML® Nexus AI Platform.
-
-Options:
-  -h, --help              Show this message and exit.
-  -d, --dest_folder TEXT  The destination package folder path. If this option
-                          is not specified, the built packages will be located
-                          in a subdirectory named fedml-federate-packages in the
-                          directory of YAML_FILE
-```
-
-At first, you need to define your job properties in the job yaml file, e.g., workspace, job entry commands.
-
-This job yaml file can be from the launch job yaml file, which is as follows:
-
-```
 # Local directory where your source code resides.
 # It should be the relative path to this job yaml file or the absolute path.
 # If your job doesn't contain any source code, it can be empty.
@@ -63,29 +43,6 @@ computing:
   #allow_cross_cloud_resources: true # true, false
   #device_type: CPU              # options: GPU, CPU, hybrid
   resource_type: A100-80G       # e.g., A100-80G, please check the resource type list by "fedml show-resource-type" or visiting URL: https://open.fedml.ai/accelerator_resource_type
-```
 
-The config items named fedml_data_args and fedml_model_args will be mapped to the equivalent environment variables as follows.
-```
-dataset_name = $FEDML_DATASET_NAME
-dataset_path = $FEDML_DATASET_PATH
-dataset_type = $FEDML_DATASET_TYPE
-model_name = $FEDML_MODEL_NAME
-model_cache_path = $FEDML_MODEL_CACHE_PATH
-input_dim = $FEDML_MODEL_INPUT_DIM
-output_dim = $FEDML_MODEL_OUTPUT_DIM
-```
-
-Your may use these environment variables in your job commands. e.g.,
-```
-job: |
-    python3 torch_client.py --cf config/fedml_config.yaml --rank $FEDML_CLIENT_RANK --role client --run_id $FEDML_CURRENT_RUN_ID -m $FEDML_MODEL_NAME -mc $FEDML_MODEL_CACHE_PATH -mi $FEDML_MODEL_INPUT_DIM -mo $FEDML_MODEL_OUTPUT_DIM -dn $FEDML_DATASET_NAME -dt $FEDML_DATASET_TYPE -dp $FEDML_DATASET_PATH
-```
-
-### Examples
-```
-fedml federate build federated_job.yaml
-
-Your client package file is located at: /home/fedml/launch/fedml-federate-packages/client-package.zip
-Your server package file is located at: /home/fedml/launch/fedml-federate-packages/server-package.zip
-```
+training_params:
+  learning_rate: 0.004
