--- a/python/examples/launch/train_build_package/train_job.yaml
+++ b/python/examples/launch/train_build_package/train_job.yaml
@@ -1,51 +1,20 @@
 # Local directory where your source code resides.
 # It should be the relative path to this job yaml file or the absolute path.
 # If your job doesn't contain any source code, it can be empty.
-workspace: hello_world
+workspace: .
 
 # Running entry commands which will be executed as the job entry point.
 # If an error occurs, you should exit with a non-zero code, e.g. exit 1.
 # Otherwise, you should exit with a zero code, e.g. exit 0.
 # Support multiple lines, which can not be empty.
 job: |
-    echo "current job id: $FEDML_CURRENT_RUN_ID"
-    echo "current edge id: $FEDML_CURRENT_EDGE_ID"
-    echo "Hello, Here is the launch platform."
-    echo "Current directory is as follows."
-    pwd
-    python3 hello_world.py
-    #sleep 20
-    #exit 1
-    #echo "Current GPU information is as follows."
-    #nvidia-smi # Print GPU information
-    #gpustat
-    #echo "Download the file from http://212.183.159.230/200MB.zip ..."
-    #wget http://212.183.159.230/200MB.zip
-    #rm ./200MB.zip*
-    #echo "The downloading task has finished."
-    # echo "Training the vision transformer model using PyTorch..."
-    # python vision_transformer.py --epochs 1
-
-# If you want to use the job created by the MLOps platform,
-# just uncomment the following three, then set job_id and config_id to your desired job id and related config.
-#job_args:
-#  job_id: 2070
-#  config_id: 111
-
-# If you want to create the job with specific name, just uncomment the following line and set job_name to your desired job name
-#job_name: cv_job
+    python3 train.py --epochs 1
 
 job_type: train              # options: train, deploy, federate
-
-# train subtype: general_training, single_machine_training, cluster_distributed_training, cross_cloud_training
-# federate subtype: cross_silo, simulation, web, smart_phone
-# deploy subtype: none
-job_subtype: generate_training
 
 # Bootstrap shell commands which will be executed before running entry commands.
 # Support multiple lines, which can be empty.
 bootstrap: |
-  # pip install -r requirements.txt
   echo "Bootstrap finished."
 
 computing:
