--- a/python/examples/federate/security/mqtt_s3_fedavg_byzantine_krum_mnist_lr_example/config/fedml_config.yaml
+++ b/python/examples/federate/security/mqtt_s3_fedavg_byzantine_krum_mnist_lr_example/config/fedml_config.yaml
@@ -56,10 +56,11 @@ tracking_args:
   wandb_name: fedml_torch_fedavg_mnist_lr
 
 attack_args:
-  enable_attack: false
-  attack_type: None
+  enable_attack: true
+  attack_type: byzantine
+  attack_mode: random
+  byzantine_client_num: 1
 
 defense_args:
   enable_defense: true
   defense_type: krum
-  byzantine_client_num: 1
