[DevOps] update devops files.

--- a/.github/workflows/build_wheels_and_dev.yml
+++ b/.github/workflows/build_wheels_and_dev.yml
@@ -1,4 +1,4 @@
-name: Build-Wheels-PyPi
+name: Build-Wheels-PyPi-Dev
 # https://github.com/pypa/cibuildwheel
 # Controls when the workflow will run
 on:
