--- a/.github/workflows/build_wheels_and_releases.yml
+++ b/.github/workflows/build_wheels_and_releases.yml
@@ -1,4 +1,4 @@
-name: Build-Wheels-PyPi
+name: Build-Wheels-PyPi-Release
 # https://github.com/pypa/cibuildwheel
 # Controls when the workflow will run
 on:
