--- a/devops/dockerfile/device-image/Dockerfile-Release
+++ b/devops/dockerfile/device-image/Dockerfile-Release
@@ -1,6 +1,6 @@
 ARG VERSION=release
 ARG IS_BUILDING_GPU_IMAGE=0
-ARG BASE_IMAGE=public.ecr.aws/x6k8q1x9/fedml-device-image:base
+ARG BASE_IMAGE=docker.io/fedml/fedml-device-image:base
 FROM ${BASE_IMAGE}
 
 ADD ./devops/scripts/runner.sh ./fedml/runner.sh
