[CoreEngine] 1. add the error response for inference APIs. 2. refactor the cloud agent and cloud server to make it more robust.

--- a/python/fedml/computing/scheduler/master/templates/fedml-server-deployment.yaml
+++ b/python/fedml/computing/scheduler/master/templates/fedml-server-deployment.yaml
@@ -29,6 +29,8 @@ spec:
       - key: "node.kubernetes.io/ci"
         operator: "Exists"
         effect: "NoSchedule"
+      serviceAccountName: fedml-kubectl-sa-ops
+      serviceAccount: fedml-kubectl-sa-ops
       containers:
       - name: fedml-aggregator
         image: $FEDML_AGGREGATOR_IMAGE_PATH
