--- a/python/examples/launch/serve_job_mnist.yaml
+++ b/python/examples/launch/serve_job_mnist.yaml
@@ -21,7 +21,7 @@ bootstrap: |
   # pip install -r requirements.txt
   echo "Bootstrap finished."
 
-task_type: deploy              # options: train, deploy, federate
+job_type: deploy              # options: train, deploy, federate
 
 # If you want to use the model created by the MLOps platform or create your own model card with a specified name,
 # just uncomment the following four lines, then set model_name to your desired model name or set your desired endpoint name
