Adding proper aggregator and client method overriders.

--- a/python/examples/federate/simulation/mpi_asyncfedavg_mnist_lr_example/config/fedml_config.yaml
+++ b/python/examples/federate/simulation/mpi_asyncfedavg_mnist_lr_example/config/fedml_config.yaml
@@ -23,7 +23,7 @@ train_args:
   epochs: 1
   batch_size: 10
   client_optimizer: sgd
-  lr: 0.03
+  learning_rate: 0.03
 
 validation_args:
   frequency_of_the_test: 5
