(1) Changed mpi4py import statement throughout the library to avoid reference error (2) removed ABORT call from fedml_comm_mamager and use MPI.Finalize() for graceful shutdown of the environment (3) restructured mpi/com_mamanger to properly release resources (4) introduced asynchronous (non-blocking) reception of messages in the MPI communication channel of the MPIReceiveThread.

--- a/.gitignore
+++ b/.gitignore
@@ -274,3 +274,4 @@ python/tests/test_model_cli/llm_deploy/src/constants/__init__.py
 python/tests/test_model_cli/llm_deploy/src/constants/prompt_template.py
 python/examples/launch/hello_world/bootstrap.bat
 python/examples/launch/hello_world/fedml_job_entry_pack.bat
+**mpi_host_file
