--- a/python/examples/launch/federated_job.yaml
+++ b/python/examples/launch/federated_job.yaml
@@ -32,7 +32,7 @@ fedml_env:
 # train subtype: general_training, single_machine_training, cluster_distributed_training, cross_cloud_training
 # federate subtype: cross_silo, simulation, web, smart_phone
 # deploy subtype: none
-job_subtype: cross_silo
+job_subtype: simulation
 
 # Bootstrap shell commands which will be executed before running entry commands.
 # Support multiple lines, which can be empty.
@@ -44,5 +44,5 @@ computing:
   minimum_num_gpus: 1           # minimum # of GPUs to provision
   maximum_cost_per_hour: $3000   # max cost per hour for your job per gpu card
   #allow_cross_cloud_resources: true # true, false
-  device_type: CPU              # options: GPU, CPU, hybrid
-  #resource_type: A100-800G       # e.g., A100-80G, please check the resource type list by "fedml show-resource-type" or visiting URL: https://open.fedml.ai/accelerator_resource_type
+  #device_type: CPU              # options: GPU, CPU, hybrid
+  resource_type: A100-80GB-SXM      # e.g., A100-80G, please check the resource type list by "fedml show-resource-type" or visiting URL: https://open.fedml.ai/accelerator_resource_type
