--- a/python/examples/train/llm_train/job.yaml
+++ b/python/examples/train/llm_train/job.yaml
@@ -10,7 +10,6 @@ workspace: .
 job: |
   echo "Current directory is: \"$(pwd)\"."
 
-  export WANDB_MODE="disabled"  # disable wandb
   export TOKENIZERS_PARALLELISM="true"
 
   echo "Starting training job."
@@ -26,7 +25,7 @@ job: |
     --num_train_epochs 0 \
     --max_steps 100
 
-  echo "job finished."
+  echo "training job finished."
 
 # Bootstrap shell commands which will be executed before running entry commands.
 # Support multiple lines, which can be empty.
