--- a/python/examples/train/llm_train/requirements.txt
+++ b/python/examples/train/llm_train/requirements.txt
@@ -7,14 +7,8 @@ accelerate
 transformers[torch]>=4.31.0
 safetensors
 datasets>=2.14.0
-evaluate
 einops
-fedml>=0.8.13
-sentencepiece
-tensorboard
+fedml[llm]>=0.8.17
 tqdm
 wandb
-zstandard
-ninja
-packaging
 pyyaml
