--- a/python/examples/launch/federated_mnist_sp/config/fedml_config.yaml
+++ b/python/examples/launch/federated_mnist_sp/config/fedml_config.yaml
@@ -1,7 +1,7 @@
 common_args:
-  training_type: "cross_silo"
-  scenario: "horizontal"
-  using_mlops: false
+  training_type: "simulation" # "simulation", "cross_silo"
+  # scenario: "horizontal"
+  # using_mlops: false
   random_seed: 0
 
 environment_args:
@@ -40,12 +40,7 @@ device_args:
   gpu_mapping_key: mapping_default
 
 comm_args:
-  backend: "MQTT_S3"
-  mqtt_config_path: config/mqtt_config.yaml
-  s3_config_path: config/s3_config.yaml
-  # If you want to use your customized MQTT or s3 server as training backends, you should uncomment and set the following lines.
-  #customized_training_mqtt_config: {'BROKER_HOST': 'your mqtt server address or domain name', 'MQTT_PWD': 'your mqtt password', 'BROKER_PORT': 1883, 'MQTT_KEEPALIVE': 180, 'MQTT_USER': 'your mqtt user'}
-  #customized_training_s3_config: {'CN_S3_SAK': 'your s3 aws_secret_access_key', 'CN_REGION_NAME': 'your s3 region name', 'CN_S3_AKI': 'your s3 aws_access_key_id', 'BUCKET_NAME': 'your s3 bucket name'}
+  backend: "sp" 
 
 tracking_args:
    # When running on MLOps platform(open.fedml.ai), the default log path is at ~/.fedml/fedml-client/fedml/logs/ and ~/.fedml/fedml-server/fedml/logs/
