Trying out cFL single process and MPI execution through fedml launch and renaming/reorganizing examples directory structure.

--- a/python/examples/federate/serverless/federated_mnist_mpi/config/fedml_config.yaml
+++ b/python/examples/federate/serverless/federated_mnist_mpi/config/fedml_config.yaml
@@ -19,10 +19,10 @@ model_args:
 train_args:
   federated_optimizer: "FedAvg"
   client_id_list:
-  client_num_in_total: 2
-  client_num_per_round: 2
+  client_num_in_total: 3
+  client_num_per_round: 3
   comm_round: 3
-  epochs: 1
+  epochs: 4
   batch_size: 10
   client_optimizer: sgd
   learning_rate: 0.03
@@ -32,17 +32,10 @@ validation_args:
   frequency_of_the_test: 1
 
 device_args:
-  worker_num: 2
+  worker_num: 3
   using_gpu: false
   gpu_mapping_file: config/gpu_mapping.yaml
   gpu_mapping_key: mapping_default
 
 comm_args:
-  backend: "sp" 
-
-tracking_args:
-   # When running on MLOps platform(open.fedml.ai), the default log path is at ~/.fedml/fedml-client/fedml/logs/ and ~/.fedml/fedml-server/fedml/logs/
-  enable_wandb: false
-  wandb_key: ee0b5f53d949c84cee7decbe7a629e63fb2f8408
-  wandb_project: fedml
-  wandb_name: fedml_torch_fedavg_mnist_lr
+  backend: "MPI"
