--- a/devops/dockerfile/server-agent/Dockerfile-Local
+++ b/devops/dockerfile/server-agent/Dockerfile-Local
@@ -25,6 +25,7 @@ ENV MODE=normal FEDML_VERSION=${VERSION} ACCOUNT_ID=0 SERVER_AGENT_ID=0 \
     AWS_IAM_ACCESS_ID=0 \
     AWS_IAM_ACCESS_KEY=0 \
     AWS_REGION=0 \
-    FEDML_ENV_LOCAL_ON_PREMISE_PLATFORM_HOST=host.docker.internal
+    FEDML_ENV_LOCAL_ON_PREMISE_PLATFORM_HOST=host.docker.internal \
+    FEDML_ENV_LOCAL_ON_PREMISE_PLATFORM_PORT=80
 
 CMD bash ./start-redis.sh; ./set-aws-credentials.sh ${AWS_IAM_ACCESS_ID} ${AWS_IAM_ACCESS_KEY} ${AWS_REGION};python3 ./fedml-pip/fedml/computing/scheduler/master/server_daemon.py -t login -u ${ACCOUNT_ID} -k ${ACCOUNT_ID} -v ${FEDML_VERSION} -r cloud_agent -id ${SERVER_AGENT_ID};bash ./runner.sh
