--- a/python/fedml/workflow/driver_example/hello_world_job.yaml
+++ b/python/fedml/workflow/driver_example/hello_world_job.yaml
@@ -24,6 +24,6 @@ bootstrap: |
   echo "Bootstrap finished."
 
 computing:
-  resource_type: H100-80GB-HBM3    # e.g., A100-80G, please check the resource type list by "fedml show-resource-type" or visiting URL: https://open.fedml.ai/accelerator_resource_type
+  resource_type: A100-80GB-SXM    # e.g., A100-80G, please check the resource type list by "fedml show-resource-type" or visiting URL: https://open.fedml.ai/accelerator_resource_type
   minimum_num_gpus: 1             # minimum # of GPUs to provision
-  maximum_cost_per_hour: $0.5    # max cost per hour of all machines for your job
+  maximum_cost_per_hour: $10    # max cost per hour of all machines for your job
