--- a/python/fedml/workflow/driver_example/customized_job_example/deploy_3d_job/fedml_model_config.yaml
+++ b/python/fedml/workflow/driver_example/customized_job_example/deploy_3d_job/fedml_model_config.yaml
@@ -6,7 +6,7 @@ server_external_port: 20202
 server_internal_port: 2203
 
 environment_variables:
-  NEXUS_API_KEY: ""
+  NEXUS_API_KEY: "" # Here you need to set your API key from nexus.fedml.ai
 
 bootstrap: |
   echo "Bootstrap start..."
