--- a/python/fedml/workflow/driver_example/customized_job_example/deploy_image_job.yaml
+++ b/python/fedml/workflow/driver_example/customized_job_example/deploy_image_job.yaml
@@ -8,7 +8,7 @@ workspace: deploy_image_job
 job: |
     echo "current job id: $FEDML_CURRENT_RUN_ID"
     echo "current edge id: $FEDML_CURRENT_EDGE_ID"
-    echo "Hello, Here is the launch platform."
+    echo "Hello, Here is the FedML Nextus AI platform."
     echo "Current directory is as follows."
     pwd
     sleep 3
