--- a/python/fedml/workflow/driver_example/customized_job_example/train_job.yaml
+++ b/python/fedml/workflow/driver_example/customized_job_example/train_job.yaml
@@ -12,7 +12,7 @@ docker:
 # Running entry commands which will be executed as the job entry point.
 # Support multiple lines, which can not be empty.
 job: |
-    echo "Hello, Here is the Falcon platform."
+    echo "Hello, Here is the FedML Nextus AI platform."
     echo "Current directory is as follows."
     pwd
     python3 main_entry.py
