--- a/python/examples/deploy/dummy_job/config.yaml
+++ b/python/examples/deploy/dummy_job/config.yaml
@@ -1,5 +1,8 @@
 workspace: "./src"
 entry_point: "serve_main.py"
+auto_detect_public_ip: true
+server_external_port: 16014
+server_internal_port: 2203
 bootstrap: |
   echo "Bootstrap start..."
   sleep 15
